# agi-cognitive-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: goalshield_v1_full.jsonl  goalshield_v1_pilot.jsonl
notebooks/: goalshield_benchmark.py
results/: heuristic_baselines_full.csv  heuristic_summary_by_difficulty.csv  heuristic_summary_overall.csv
results/kaggle_v20/: goalshield_benchpress_input.json  goalshield_benchpress_report.json  goalshield_healthcheck_summary.csv  goalshield_primary_health_summary.csv  goalshield_primary_model_summary.csv  goalshield_run_plan.json  goalshield_submission_summary.md
scripts/: benchpress_novelty.py  build_kaggle_notebook.py  publish_kaggle_notebook.py
src/agi_cognitive_benchmark/: __init__.py  baselines.py  dataset.py  generator.py  metrics.py  models.py  parsing.py  solver.py
src/agi_cognitive_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agi_cognitive_benchmark/scripts/: __init__.py  generate_dataset.py  run_heuristic_baselines.py
tests/: test_generation.py  test_parsing.py  test_solver.py
writeup/: draft.md
